# AleksandrZaec-Notification_PhotoPoint

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env_example  pyproject.toml
config/: settings.py  urls.py
notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
notifications/services/: email_service.py  sms_service.py  telegram_service.py
notifications/tests/: conftest.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_views.py
